[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Fonts_MainMenu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Fonts_MainMenuButtons.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Main Menu/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Main Menu/Bot&User.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.596078, 0.596078, 0.596078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot&User" parent="." instance=ExtResource( 4 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -266.0
margin_top = -281.0
margin_right = 266.0
margin_bottom = 280.0
custom_constants/separation = 70
__meta__ = {
"_edit_use_anchors_": false
}

[node name="App Title" type="Label" parent="VBoxContainer"]
margin_right = 532.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = " Community Virtual 
RPG Table"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 189.0
margin_right = 532.0
margin_bottom = 561.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 13

[node name="Continue" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 532.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Continue last table"

[node name="Load table" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 532.0
margin_bottom = 179.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Load table"

[node name="Settings" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 532.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Exit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 532.0
margin_bottom = 372.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="is_dir" from="." to="Bot&User" method="_on_Main_Menu_is_dir"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/Load table" to="." method="_on_Load_table_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_up"]
